--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ h1,h2,h3,h4,h5,p{
     text-align:center;
 }
 
-@media only screen and {max-width:600px}{
+@media only screen and (max-width:600px){
   .card-collection{
     grid-template-columns: 1fr;
   }
